Fixes a crash when changing the type of an account

Clearing a HierarchyFilterProxyModel requires to reset the source model.

BUG:394762
FIXED-IN:4.8.3